test/langtools/tools/javac/superInit/SuperInitBad20.out
SuperInitBad20.java:11:9: compiler.err.cant.ref.before.ctor.called: this
1 error
